--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html></html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="biografi.css">
+    <link rel="stylesheet" href="index.css">
 <title>Biografi Woozi Seventeen</title>
 </head>
 <body>
